--- a/servicios.html
+++ b/servicios.html
@@ -3,10 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="El lugar donde mimamos a tu mascota. Contamos con la mejor atención veterinaria y de peluquería para tu mascota. Podés comunicarte telefónicamente al 0810-555-5555 para solicitar turno">
+	<meta name="keywords" content="perros, gatos, veterinaria, peluquería, alimentos, accesorios, envíos, tarjetas, promociones, descuentos">
+	<link rel="icon" href="images/favicon.ico" type="image/ico"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos_compilados.css">
-	<title>Pet-shop "Amigos Peludos"</title>
+	<title>Pet-shop "Amigos Peludos". Un lugar con los mejores profesionales para atender a nuestros amiguitos de cuatro patas.</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg m-auto navbar-light bg-light">
@@ -39,53 +43,61 @@
 			</div>
 		</div>
 	</nav>
-	<div class="container header_servicios">
-		<div class="card bg-info">
-			<div class=" fs-1 card-body">
-				<p>VETERINARIA</p>
-			</div>
-		</div>
-	</div>
-	<div class="container mb-3 mt-5">
-		<div class="card  bg-info" style="width: 100%;">
-			<div class="row g-0">
-		  		<div class="col-md-4">
-					<img src="images/consulta.png" class="img-fluid rounded-start" alt="perro y gato">
-		  		</div>
-		 		<div class="col-md-8">
-					<div class="serv_vete">
-			  			<h5 class="card-title mt-5">Consultas</h5>
-			  			<p class="vete card-text">Como ya sabés, tu amiguito es nuestra principal prioridad. Por eso lo atendemos las 24 horas, los 365 días del año con los mas calificados profesionales del país.</p>
+	<main>
+		<section>
+			<div class="container header_servicios">
+				<div class="card bg-info">
+					<div class=" fs-1 card-body">
+						<p>VETERINARIA</p>
 					</div>
-		 		</div>
+				</div>
 			</div>
-	 	</div>
-	</div>
-
-	<div class="container header_servicios">
-		<div class="pelu card bg-info">
-			<div class=" fs-1 card-body">
-				<p> PELUQUERÍA </p>
-			</div>
-	  	</div>
-	</div>
-	<div class="container">
-		<div class="card mb-3 mt-5 bg-info" style="width: 100%;">
-			<div class="row g-0">
-				<div class="col-md-8">
-					<div class="serv_vete">
-			  			<h5 class="card-title mt-5">Estética</h5>
-			  			<p class="vete card-text">El cuidado del pelo de tu mascota es esencial para mantenerla linda y saludable por eso ofrecemos baños, cortes y peinados que combinan estos dos aspectos fundamentales para su bienestar con una amplia variedad de productos hipoalergénicos y naturales. Y además atendidos por los mejores peluqueros.</p>
+			<article>
+				<div class="container mb-3 mt-5">
+					<div class="card  bg-info" style="width: 100%;">
+						<div class="row g-0">
+					  		<div class="col-md-4">
+								<img src="images/consulta.png" class="img-fluid rounded-start" alt="perro y gato">
+					  		</div>
+					 		<div class="col-md-8">
+								<div class="serv_vete">
+						  			<h5 class="card-title mt-5">Consultas</h5>
+						  			<p class="vete card-text">Como ya sabés, tu amiguito es nuestra principal prioridad. Por eso lo atendemos las 24 horas, los 365 días del año con los mas calificados profesionales del país.</p>
+								</div>
+					 		</div>
+						</div>
+				 	</div>
+				</div>
+			</article>
+		</section>
+		<section>
+			<div class="container header_servicios">
+				<div class="pelu card bg-info">
+					<div class=" fs-1 card-body">
+						<p> PELUQUERÍA </p>
 					</div>
-		 		</div>
-				<div class="serv_pelu col-md-4">
-					<img src="images/perro_y_gato_baño.jpg" class="img-fluid rounded-start" alt="perro y gato debajo de toallon">
-		  		</div>
+			  	</div>
 			</div>
-		</div>
-	</div>
-	<div>
-
+			<article>
+				<div class="container">
+					<div class="card mb-3 mt-5 bg-info" style="width: 100%;">
+						<div class="row g-0">
+							<div class="col-md-8">
+								<div class="serv_vete">
+						  			<h5 class="card-title mt-5">Estética</h5>
+						  			<p class="vete card-text">El cuidado del pelo de tu mascota es esencial para mantenerla linda y saludable por eso ofrecemos baños, cortes y peinados que combinan estos dos aspectos fundamentales para su bienestar con una amplia variedad de productos hipoalergénicos y naturales. Y además atendidos por los mejores peluqueros.</p>
+								</div>
+					 		</div>
+							<div class="serv_pelu col-md-4">
+								<img src="images/perro_y_gato_baño.jpg" class="img-fluid rounded-start" alt="perro y gato debajo de toallon">
+					  		</div>
+						</div>
+					</div>
+				</div>
+			</article>
+		</section>
+	</main>
+	<footer>
 		<div class="container footer">
 			<div class="text-center text-lg-start bg-light text-muted">
 				<div class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
@@ -129,16 +141,10 @@
 				<div class="pie text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">© Pet-Shop Amigos Peludos</div>
 			</div>
 		</div>
-		
-
-
-	<div class="icono">
-		<a href="https://api.whatsapp.com/" target="_blank"><img src="images/icono.png" alt="icono de whatsapp"></a>
-	</div>
-
-
-
+		<div class="icono">
+			<a href="https://api.whatsapp.com/" target="_blank"><img src="images/icono.png" alt="icono de whatsapp"></a>
+		</div>
+	</footer>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
 </body>
 </html>
